# rust_actix_live_stream

./: .env  Cargo.toml  README.md
migrations/2019-04-28-190706_create_messages/: up.sql
src/: handler.rs  main.rs  model.rs  schema.rs
src/actor/: db.rs  mod.rs  session.rs  ws.rs
